[gd_scene load_steps=12 format=2]

[ext_resource path="res://TeamGame.gd" type="Script" id=1]
[ext_resource path="res://assets/img/fixed/bg.png" type="Texture" id=2]
[ext_resource path="res://assets/img/fixed/plus10.png" type="Texture" id=3]
[ext_resource path="res://assets/img/fixed/questions.png" type="Texture" id=4]
[ext_resource path="res://assets/img/fixed/plus5.png" type="Texture" id=5]
[ext_resource path="res://assets/audio/fixed/charm.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/audio/fixed/error.wav" type="AudioStream" id=11]
[ext_resource path="res://score.tscn" type="PackedScene" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 74.2449, 96.5492 )

[sub_resource type="Animation" id=2]
resource_name = "fly"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fly"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.294118, 0.262745, 0.262745, 1 )
position = Vector2( 494.421, 506.424 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="Question" type="StaticBody2D" parent="."]
position = Vector2( 500.618, 171.2 )
input_pickable = true

[node name="Sprite" type="Sprite" parent="Question"]
texture = ExtResource( 4 )

[node name="Collision" type="CollisionShape2D" parent="Question"]
shape = SubResource( 1 )

[node name="AudioQ" type="AudioStreamPlayer" parent="."]

[node name="Team1" type="Node2D" parent="."]

[node name="Team2" type="Node2D" parent="."]

[node name="Points10" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="Points10"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Animation" type="AnimationPlayer" parent="Points10"]
anims/fly = SubResource( 2 )

[node name="Audio" type="AudioStreamPlayer" parent="Points10"]
stream = ExtResource( 10 )

[node name="Points5" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="Points5"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Animation" type="AnimationPlayer" parent="Points5"]
anims/fly = SubResource( 3 )

[node name="Audio" type="AudioStreamPlayer" parent="Points5"]
stream = ExtResource( 10 )

[node name="AudioError" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Score" parent="." instance=ExtResource( 14 )]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 1010.0
margin_bottom = 0.0
[connection signal="input_event" from="Question" to="." method="_on_Owl_input_event"]
[connection signal="animation_finished" from="Points10/Animation" to="." method="_on_points10_animation_finished"]
[connection signal="animation_finished" from="Points5/Animation" to="." method="_on_points5_animation_finished"]
